@@ -93,7 +93,7 @@ module NewRelic
     require 'new_relic/agent/samplers/cpu_sampler'
     require 'new_relic/agent/samplers/memory_sampler'
     require 'new_relic/agent/samplers/object_sampler'
-    require 'new_relic/agent/samplers/delayed_job_lock_sampler'
+    require 'new_relic/agent/samplers/delayed_job_sampler'
     require 'set'
     require 'thread'
     require 'resolv'
