@@ -1,3 +1,6 @@
+ * Replaced "Custom/DJ Locked Jobs" metric with three new metrics for monitoring 
+   DelayedJob: queue_length, failed_jobs, and locked_jobs, all under Workers/DelayedJob
+
 v3.3.4.1
  * Bug fix when rendering empty collection in Rails 3.1+
 
